pod-security/restricted/restrict-seccomp-strict/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-seccomp-strict
policies:
  - ../restrict-seccomp-strict.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: restrict-seccomp-strict
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
      - badcronjob05
      - badcronjob06
      - badcronjob07
    result: fail
    rule: check-seccomp-strict
  - kind: Deployment
    policy: restrict-seccomp-strict
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
      - baddeployment05
      - baddeployment06
      - baddeployment07
    result: fail
    rule: check-seccomp-strict
  - kind: Pod
    policy: restrict-seccomp-strict
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
      - badpod07
    result: fail
    rule: check-seccomp-strict
  - kind: CronJob
    policy: restrict-seccomp-strict
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
      - goodcronjob07
      - goodcronjob08
      - goodcronjob09
      - goodcronjob10
    result: pass
    rule: check-seccomp-strict
  - kind: Deployment
    policy: restrict-seccomp-strict
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
      - gooddeployment07
      - gooddeployment08
      - gooddeployment09
      - gooddeployment10
    result: pass
    rule: check-seccomp-strict
  - kind: Pod
    policy: restrict-seccomp-strict
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
    result: pass
    rule: check-seccomp-strict
